tests/baselines/reference/asyncGenerators.classMethod.22.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.22.es2017.ts(2,14): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/asyncGenerators/es2017/classMethods/asyncGenerators.classMethod.22.es2017.ts (1 errors) ====
    class C {
        async * [await]() {
                 ~~~~~
!!! error TS2304: Cannot find name 'await'.
        }
    }